// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`realtime Test: after realtime events arrived 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": Object {},
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getState": Object {
    "lala": Object {
      "0": Object {
        "bla": "1",
        "id": 0,
      },
      "1": Object {
        "bla": "4",
        "id": 1,
      },
      "2": Object {
        "bla": "5",
        "id": 2,
      },
      "3": Object {
        "bla": "2",
        "id": 3,
      },
    },
  },
  "lastFetch": Object {
    "0": -2077750800000,
    "1": -2077750800000,
    "2": -2077750800000,
    "3": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`realtime Test: after realtime remove arrived 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": Object {},
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getState": Object {
    "lala": Object {
      "0": Object {
        "bla": "1",
        "id": 0,
      },
      "1": Object {
        "bla": "4",
        "id": 1,
      },
      "2": null,
      "3": Object {
        "bla": "2",
        "id": 3,
      },
    },
  },
  "lastFetch": Object {
    "0": -2077750800000,
    "1": -2077750800000,
    "2": -2077750800000,
    "3": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`realtime Test: before realtime events arrived 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": Object {},
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getState": Object {},
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;
